--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,10 +1,10 @@
 // 아래에 폰트를 불러오는 코드를 넣어주세요.
-
+@import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700&display=swap&subset=korean');
 // Global styling for this template
 body {
   font-size: 20px;
   color: $gray-900;
-  font-family: sans-serif;
+  font-family: 'Nanum Myeongjo', serif;
 }
 
 p {
