--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="naver-site-verification" content="dac66280df2437778537ac377562d70e7ba9f723" />
 
   <title>
 		{%if page.title %}
