--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,10 +18,10 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">전체 글</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/1" | relative_url }}">카테고리 1</a>
+          <a class="nav-link" href="{{ "/category/review/" | relative_url }}">review</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/2" | relative_url }}">카테고리 2</a>
+          <a class="nav-link" href="{{ "/category/work/" | relative_url }}">work</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
