--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="naver-site-verification" content="dac66280df2437778537ac377562d70e7ba9f723" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162040004-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-162040004-1');
+  </script>
 
   <title>
 		{%if page.title %}
