include/head 수정

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,19 +65,12 @@
     <meta property="article:author" content="{{ page.author }}" />
   {% endif %}
   {% if page.image %}
-    <meta property="og:image" content="{{ site.github.url }}{{ page.image.feature }}" />
-    <meta name="twitter:image:src" content="{{ site.github.url }}{{ page.image.feature }}" />
-  {% else %}
-    <meta property="og:image" content="{{ site.github.url }}{{ site.thumbnail }}" />
-    <meta name="twitter:image:src" content="{{ site.github.url }}{{ site.thumbnail }}" />
-  {% endif %}
-    <meta property="og:locale" content="{{ site.locale }}" />
-    <meta property="og:site_name" content="{{ site.title }}" />
-  {% if page.categories %}
-    {% for category in page.categories limit:1 %}
-    <meta property="article:section" content="{{ category }}" />
-    {% endfor %}
-  {% endif %}
+      <meta property="og:image" content="{{ site.github.url }}{{ page.feature }}" />
+      <meta name="twitter:image:src" content="{{ site.github.url }}{{ page.feature }}" />
+    {% else %}
+      <meta property="og:image" content="{{ site.github.url }}{{ site.thumbnail }}" />
+      <meta name="twitter:image:src" content="{{ site.github.url }}{{ site.thumbnail }}" />
+    {% endif %}
   {% if page.tags %}
     {% for tag in page.tags %}
     <meta property="article:tag" content="{{ tag }}" />
