--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,6 +71,13 @@
       <meta property="og:image" content="{{ site.github.url }}{{ site.thumbnail }}" />
       <meta name="twitter:image:src" content="{{ site.github.url }}{{ site.thumbnail }}" />
     {% endif %}
+    <meta property="og:locale" content="{{ site.locale }}" />
+    <meta property="og:site_name" content="{{ site.title }}" />
+  {% if page.categories %}
+    {% for category in page.categories limit:1 %}
+    <meta property="article:section" content="{{ category }}" />
+    {% endfor %}
+  {% endif %}
   {% if page.tags %}
     {% for tag in page.tags %}
     <meta property="article:tag" content="{{ tag }}" />
