--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,7 +64,7 @@
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
     <meta property="article:author" content="{{ page.author }}" />
   {% endif %}
-  {% if page.image %}
+  {% if page.feature %}
       <meta property="og:image" content="{{ site.github.url }}{{ page.feature }}" />
       <meta name="twitter:image:src" content="{{ site.github.url }}{{ page.feature }}" />
     {% else %}
