sa1 글 발행/ 레터 글 수정

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-162040004-1');
+    gtag('config', 'AW-808744908');
   </script>
 
   <title>
