뉴스레터 신청

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,3 +50,5 @@ layout: default
       </div>
     </div>
   </article>
+
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"40d6f3c6aceeddb79535a37f6","lid":"0b7765df4e","uniqueMethods":true}) })</script>
