--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,18 +43,22 @@ layout: default
             <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
                 Post</span> &rarr;</a>
             {% endif %}
-            <script>
-              var postName = {{page.title}};
-              gtag('event','보기',{
-              'event_category':'글보기',
-              'event_label' : postName});
-            </script>
-  {% include disqus.html %}
-          </div>
 
+          </div>
         </div>
       </div>
-    </div>
-  </article>
+      </div>
+    </article>
 
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"40d6f3c6aceeddb79535a37f6","lid":"0b7765df4e","uniqueMethods":true}) })</script>
+      <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
+
+      </script>
+  <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"40d6f3c6aceeddb79535a37f6","lid":"0b7765df4e","uniqueMethods":true}) })</script>
+
+  <script>
+    var postName = {{ page.title }};
+    gtag('event','보기',{
+    'event_category':'글보기',
+    'event_label' : postName});
+  </script>
+    {% include disqus.html %}
