--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,10 +60,10 @@ layout: default
     gtag('event', '보기', {
     'event_category': '글보기',
     'event_label': postName});
-    
-    fbq('track','viewcontent',{
-        content_name : '{{ page.title }}'
-   });
+
+    fbq('track','ViewContent',{
+   content_name : '{{ page.title }}'
+ });
 
   </script>
 
