--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,8 +56,7 @@ layout: default
   <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"40d6f3c6aceeddb79535a37f6","lid":"0b7765df4e","uniqueMethods":true}) })</script>
 
 {% include disqus.html %}
-<script>
-
+<script type="text/javascript">>
 dataLayer.push({
  'event': 'ViewContent',
  'content_name': '{{ page.title }}',
